force-app/main/default/objects/Client__c/fields/Active_Job_Orders__c.field-meta.xml
<CustomField>
    <fullName>Active_Job_Orders__c</fullName>
    <label>Active Job Orders</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>