force-app/main/default/objects/Client__c/fields/Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip__c</fullName>
    <label>ZIP / Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>