force-app/main/default/objects/Client__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <externalId>true</externalId>
    <label>Client Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>