force-app/main/default/objects/Client__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract (W2)</fullName>
            </value>
            <value>
                <fullName>Contract (C2C)</fullName>
            </value>
            <value>
                <fullName>Contract-to-Hire</fullName>
            </value>
            <value>
                <fullName>Direct Hire</fullName>
            </value>
            <value>
                <fullName>Statement of Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>