force-app/main/default/objects/Client__c/fields/Net_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Net_Payment_Terms__c</fullName>
    <label>Net Payment Terms (Days)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>