force-app/main/default/objects/Client__c/fields/Total_Placements__c.field-meta.xml
<CustomField>
    <fullName>Total_Placements__c</fullName>
    <label>Total Placements</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>