force-app/main/default/objects/Client__c/validationRules/Blacklisted_client_cannot_have_new_JO.validationRule-meta.xml
<ValidationRule>
    <fullName>Blacklisted_client_cannot_have_new_JO</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &apos;Blacklisted&apos;), NOT(ISBLANK(Name)) )</errorConditionFormula>
    <errorMessage>This client is blacklisted. New records cannot be created. Contact your Account Manager.</errorMessage>
</ValidationRule>