force-app/main/default/objects/Client__c/validationRules/Client_Contract_Type_is_a_required_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Contract_Type_is_a_required_field</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Contract_Type__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Contract_Type__c</errorDisplayField>
    <errorMessage>Contract Type is required before saving the record</errorMessage>
</ValidationRule>