force-app/main/default/objects/Client__c/validationRules/Client_Name_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Name_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Client_Name__c)</errorConditionFormula>
    <errorDisplayField>Client_Name__c</errorDisplayField>
    <errorMessage>Client Name is required.</errorMessage>
</ValidationRule>