force-app/main/default/objects/Client__c/validationRules/Client_Status_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Status_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please select a Status before saving the record.</errorMessage>
</ValidationRule>