force-app/main/default/objects/Client__c/validationRules/Website_must_include_protocol.validationRule-meta.xml
<ValidationRule>
    <fullName>Website_must_include_protocol</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK(Website__c)), NOT(BEGINS(Website__c, &apos;https://&apos;)), NOT(BEGINS(Website__c, &apos;http://&apos;)) )</errorConditionFormula>
    <errorDisplayField>Website__c</errorDisplayField>
    <errorMessage>Website must start with https:// or http://</errorMessage>
</ValidationRule>